# rusty-unit

./: .gitignore  .gitmodules  README.md  acronyms.tex  action.yml  bibliography.bib  data.xlsx  makefile  thesis.tex
.github/workflows/: compile-latex.yml  main.yml
JetBrainsPlugin/RustyUnit/: build.gradle.kts  settings.gradle.kts
compiler/: .gitignore  Cargo.toml  limitations.md  rust-toolchain.toml  rustc_args.txt
compiler/examples/: Cargo.toml
compiler/examples/src/: main.rs
compiler/src/: analysis.rs  data_structures.rs  extractor.rs  hir.rs  main.rs  mir.rs  monitor.rs  options.rs  traits.rs  types.rs  util.rs  writer.rs
compiler/tests/: instrumentation_test.rs  operators_test.rs
compiler/writer/: Cargo.toml
evaluation/gamie/: .gitignore  Cargo.toml  README.md  makefile
evaluation/gamie/src/: connect_four.rs  gomoku.rs  lib.rs  minesweeper.rs  reversi.rs  tictactoe.rs
evaluation/humantime/: .gitignore  Cargo.toml  makefile
evaluation/humantime/src/: date.rs  lib.rs
evaluation/lsd/: .gitignore  Cargo.toml  makefile
evaluation/lsd/src/: color.rs  main.rs  rusty_monitor.rs
evaluation/lsd/src/meta/: mod.rs
evaluation/quick-xml/: .gitignore  Cargo.toml  makefile
evaluation/quick-xml/src/: errors.rs  escapei.rs  lib.rs  reader.rs  writer.rs
evaluation/quick-xml/src/de/: map.rs  mod.rs
evaluation/tight/: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  makefile
evaluation/tight/.gitlab/issue_templates/: Bug.md  Feature.md  Improvement.md
evaluation/tight/.gitlab/merge_request_templates/: Default.md
evaluation/tight/src/: data.rs  date.rs  expense.rs  main.rs
evaluation/time/: .gitignore  Cargo.toml  makefile  rust-toolchain.toml
evaluation/time/src/: duration.rs  lib.rs  time.rs
evaluation/toycrate/: .gitignore  Cargo.toml  makefile
evaluation/toycrate/src/: hp.rs  lib.rs  numbers.rs
experiments/: coverage.py  coverage_boxplot.py  coverage_lineplot.py  coverage_statistics.py  coverage_toycrate.py  data.py  length.py  length_boxplot.py  length_lineplot.py  length_statistics.py  main.py  rvalues.py  statistics.py  toycrate_boxplot.py
experiments/coverage/: Pleco.csv  PriorityQueue.csv  fixed.csv  gamie.csv  ibig.csv  nom.csv  rstar.csv  time.csv  trying.csv  url.csv
experiments/data/: Pleco.csv  PriorityQueue.csv  experiments_dynamosa.csv  experiments_random.csv  experiments_seeded_dynamosa.csv  fixed.csv  gamie.csv  ibig.csv  nom.csv  rstar.csv  time.csv  trying.csv  url.csv
jTestify/: build.gradle  file.json
jTestify/providers/: functions.json
jTestify/providers/callables/: std::option::Option.json  std::result::Result.json  std::vec::Vec.json
jTestify/providers/implementations/: rand::rngs::ThreadRng.json  std::convert::Infallible.json  std::result::Result.json
jTestify/providers/types/: rand::rngs::ThreadRng.json  std::convert::Infallible.json  std::option::Option.json  std::result::Result.json  std::vec::Vec.json
jTestify/scripts/: coverage-report.sh
latex/: __latexindent_temp.tex  acronyms.tex  bibliography.bib  document-tmp.tex  document.tex  expose.tex  introduction.tex  listings-rust.sty  references.bib  template.sty  thesis.tex
latex/img/: branch-graph.drawio  cdg-code-example.drawio  comparison-instrumented-assertion.drawio  comparison-instrumented-branch-cfg.drawio  comparison-instrumented-fn-entry.drawio  crossover.drawio  execution-sequence-diagram.drawio  instrumented-assertion.drawio  instrumented-fn-entry.drawio  overview.drawio
latex/img/ga/: code.psd  overview.drawio
latex/img/overview/: overview-enhanced.drawio  ~$overview-enhanced.drawio.bkp
latex/img/sequence-diagram/: test-execution.drawio
latex/papers/: 10.1007_978-3-030-31784-3_14-citation.bib
latex/template/: acronyms.tex  document.tex  references.bib  references.bib.sav.tmp  template.sty
latex/template/img/: Sequence_diagram.drawio  comparison-instrumented-branch-cfg.drawio  comparison-instrumented-fn-entry.drawio  instrumented-fn-entry.drawio  overview.drawio
metrics-parser/: build.gradle
rusty-unit/: build.gradle  settings.gradle
testify/: Cargo.toml  analysis.sh  instrument.sh  tests.rs
testify/assets/: testify_monitor.rs
testify/common/: Cargo.toml
testify/common/src/: lib.rs
testify/examples/src/: dependency.rs  testify_monitor.rs
testify/generation/: Cargo.toml
testify/generation/src/: algorithm.rs  analysis.rs  branch.rs  chromosome.rs  compiler.rs  fitness.rs  fs_util.rs  generators.rs  lib.rs  operators.rs  parser.rs  source.rs  test.rs  types.rs  util.rs
testify/instrumentation/: Cargo.toml  build.sh  cdg.sh  cfg.dot  cfg.sh  instrument.sh  post-dominators.sh  visualize_graph.sh
testify/instrumentation/src/: data_structures.rs  extractor.rs  hir.rs  lib.rs  main.rs  mir.rs  monitor.rs  options.rs  util.rs  writer.rs
testify/providers/callables/: std::vec::Vec.json
testify/providers/implementations/: std::option::Option.json  std::vec::Vec.json
testify/providers/types/: std::option::Option.json  std::vec::Vec.json
testify/server/src/: main.rs
testify/src/: algorithm.rs  analysis.rs  analyze.rs  branch.rs  chromosome.rs  compiler.rs  crossover.rs  data.rs  data_structures.rs  extractor.rs  generators.rs  hir.rs  instr.rs  instrument.rs  io.rs  lib.rs  main.rs  mir.rs  monitor.rs  mutation.rs  operators.rs  options.rs  parser.rs  selection.rs  serialization.rs  server.rs  source.rs  test.rs  test_writer.rs  tests.rs  types.rs  util.rs  writer.rs
testify/src/examples/additions/: Cargo.toml
testify/src/examples/additions/src/: dependency.rs  main.rs
testify/src/instrument/: Cargo.toml
testify/src/instrument/src/: branch.rs  lib.rs  util.rs
testify/src/server/: Cargo.toml
testify/src/server/src/: main.rs
testify/tests/: example.rs  instrumentation_test.rs
testify/tests/examples/: Cargo.toml
testify/tests/examples/src/: dependency.rs  main.rs
testify/wrapper/: Cargo.toml
testify/wrapper/src/: main.rs
testify/writer/: test.json
testify/writer/src/: main.rs  testsuite.rs
tools/metrics-parser/: settings.gradle
(+524 files in other folders)
