[package]
name = "testify"
version = "0.1.0"
edition = "2018"

[lib]
name = "testify"
path = "src/lib.rs"

[[bin]]
name = "testify"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rand = "0.8.4"
syn = { version = "1.0.73", features = ["parsing", "printing", "full", "extra-traits", "visit-mut"] }
quote = "1.0.9"
proc-macro2 = "1.0.27"
instrument = {path = "./src/instrument"}