[package]
name = "testify"
version = "0.1.0"
edition = "2018"

[lib]
name = "testify"
path = "src/lib.rs"

[[bin]]
name = "testify"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
fastrand = "1.4.1"
syn = { version = "1.0.73", features = ["parsing", "printing", "full", "extra-traits", "visit-mut"] }
quote = "1.0.9"
proc-macro2 = { version = "1.0.27", features = ["span-locations"] }
which = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.10.2"
lazy_static = "1.4.0"
regex = "1.5"
pbr = "1.0.4"