[package]
name = "gamie"
version = "0.7.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "A Rust library provides abstractions for several classic tiny games"
categories = ["games", "game-development", "no-std"]
keywords = ["game", "board", "gomoku", "minesweeper", "reversi"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/gamie"

[features]
default = ["std"]
all = ["std", "serde", "connect_four", "gomoku", "minesweeper", "reversi", "tictactoe"]
std = ["snafu/std"]
connect_four = []
gomoku = []
minesweeper = ["rand"]
reversi = []
tictactoe = []

[dependencies]
rand = { version = "0.8", default-features = false, optional = true }
serde = { version = "1.0", features = ["alloc", "derive"], optional = true }
snafu = { version = "0.7", default-features = false }


[dev-dependencies]
gamie = { path = ".", features = ["all"] }
rand = "0.8"

[package.metadata.docs.rs]
all-features = true

[dependencies.redis]
version = "*"

[dependencies.ntest]
version = "*"

