[package]
authors = ["Peltoche <dev@halium.fr>"]
build = "build.rs"
categories = ["command-line-utilities"]
description = "An ls command with a lot of pretty colors and some other stuff."
keywords = ["ls"]
license = "Apache-2.0"
name = "lsd"
readme = "./README.md"
repository = "https://github.com/Peltoche/lsd"
version = "0.21.0"
edition = "2021"

[[bin]]
name = "lsd"
path = "src/main.rs"

[build-dependencies]
clap = "2.33.0"
version_check = "0.9.0"

[dependencies]
crossterm = { version = "0.21.0", features = ["serde"] }
bitflags = "=1.2.1"
dirs = "3.0.0"
libc = "0.2.3"
human-sort = "0.2.2"
term_grid = "0.1.1"
terminal_size = "0.1.4"
chrono = "0.4.0"
chrono-humanize = "0.1.0"
unicode-width = "0.1.0"
lscolors = "0.9.0"
wild = "2.0.0"
rand = { version = "0.8.4", optional = true, default-features = false }
globset = "0.4.0"
xdg = "2.1.0"
yaml-rust = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
url = "2.1.0"
ntest = "0.7.5"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"
xattr = "0.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.0", features = [
    "aclapi",
    "accctrl",
    "winnt",
    "winerror",
    "securitybaseapi",
    "winbase",
] }

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "2.33.0"

[dev-dependencies]
assert_cmd = "1"
assert_fs = "1"
predicates = "1.0.1"
tempfile = "3"
serial_test = "0.5"

[features]
sudo = []

[dependencies.redis]
version = "0.23.1"
