[package]
name = "tight"
version = "1.0.1"
authors = ["Will Korteland <will@korte.land>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A simple command-line expense tracker"
homepage = "https://git.korte.land/will/tight"
repository = "https://git.korte.land/will/tight"
documentation = "https://git.korte.land/will/tight"
readme = "README.md"
keywords = ["finance", "utility"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33"
rand = { version = "0.8", default-features = false, optional = true }
colored = "2.0"
regex = "1.3"
scan_fmt = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.redis]
version = "0.23.1"

[dependencies.ntest]
version = "0.7.5"
