[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(NOT_A_PLATFORM)'.dependencies]
rustc_driver = {path = "/Users/tim/rust/compiler/rustc_driver"}
rustc_interface = {path = "/Users/tim/rust/compiler/rustc_interface"}
rustc_middle = {path = "/Users/tim/rust/compiler/rustc_middle"}
rustc_session = {path = "/Users/tim/rust/compiler/rustc_session"}
rustc_data_structures = {path = "/Users/tim/rust/compiler/rustc_data_structures"}
rustc_span = {path = "/Users/tim/rust/compiler/rustc_span"}
rustc_hir = {path = "/Users/tim/rust/compiler/rustc_hir"}
