[package]
name = "generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generation"
path = "./src/bin/main.rs"

[dependencies]
pbr = "1.0.4"
fastrand = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "1.0.73", features = ["parsing", "printing", "full", "extra-traits", "visit-mut", "visit"] }
quote = "1.0.9"
proc-macro2 = { version = "1.0.27", features = ["span-locations"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
toml = "0.5.8"
petgraph = "0.6.0"
lazy_static = "1.4.0"
regex = "1.5"
which = "4.1.0"
dircpy-stable = "0.3.5"
env_logger = "0.9.0"
log = "0.4.14"

[target.'cfg(NOT_A_PLATFORM)'.dependencies]
rustc_driver = {path = "/Users/tim/rust/compiler/rustc_driver"}
rustc_interface = {path = "/Users/tim/rust/compiler/rustc_interface"}
rustc_middle = {path = "/Users/tim/rust/compiler/rustc_middle"}
rustc_session = {path = "/Users/tim/rust/compiler/rustc_session"}
rustc_data_structures = {path = "/Users/tim/rust/compiler/rustc_data_structures"}
rustc_span = {path = "/Users/tim/rust/compiler/rustc_span"}
rustc_hir = {path = "/Users/tim/rust/compiler/rustc_hir"}
rustc_serialize = {path = "/Users/tim/rust/compiler/rustc_serialize"}
rustc_ast = {path = "/Users/tim/rust/compiler/rustc_ast"}
rustc_target = {path = "/Users/tim/rust/compiler/rustc_target"}
