[package]
name = "instrumentation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = {version = "0.6.0", features = ["serde-1"] }
lazy_static = "1.4.0"
generation = {path = "../generation"}
uuid = { version = "0.8", features = ["v4"] }

[target.'cfg(NOT_A_PLATFORM)'.dependencies]
rustc_driver = {path = "/Users/tim/rust/compiler/rustc_driver"}
rustc_interface = {path = "/Users/tim/rust/compiler/rustc_interface"}
rustc_middle = {path = "/Users/tim/rust/compiler/rustc_middle"}
rustc_session = {path = "/Users/tim/rust/compiler/rustc_session"}
rustc_data_structures = {path = "/Users/tim/rust/compiler/rustc_data_structures"}
rustc_span = {path = "/Users/tim/rust/compiler/rustc_span"}
rustc_hir = {path = "/Users/tim/rust/compiler/rustc_hir"}
rustc_mir = {path = "/Users/tim/rust/compiler/rustc_mir"}
rustc_target = {path = "/Users/tim/rust/compiler/rustc_target"}
rustc_index = {path = "/Users/tim/rust/compiler/rustc_index"}