[package]
name = "instrument"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = {version = "1.0", features = ["span-locations"] }
syn = { version = "1.0.73", features = ["parsing", "printing", "full", "extra-traits", "visit-mut"] }
quote = "1.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"